--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "gulp": "^3.9.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.1"
+  },
+  "dependencies": {
+    "babel-preset-es2015": "^6.3.13",
+    "gulp-babel": "^6.1.1"
   }
 }
