Make main point to minified version

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "enter-view",
   "version": "0.0.3",
   "description": "Dependency-free JavaScript library to detect when element enters into view",
-  "main": "enter-view.js",
+  "main": "enter-view.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
