--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "author": "Russell Goldenberg",
   "license": "MIT",
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
     "browser-sync": "^2.10.0",
     "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.1"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.3.13",
-    "gulp-babel": "^6.1.1"
   }
 }
