--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,9 @@
 {
-	"parser": "babel-eslint",
-	"extends": "airbnb",
-	"rules": {
-		"comma-dangle": [2, "always-multiline"],
-		"indent": [2, "tab", {"SwitchCase": 1}],
-		"padded-blocks": 0,
-		"quotes": [2, "single", "avoid-escape"],
-		"no-console": 0,
-		"no-debugger": 0,
-		"no-unexpected-multiline": 2,
-		"semi": [2, "never"]
-	}
+  "extends": ["airbnb-base", "prettier"],
+  "plugins": ["prettier"],
+  "rules": {
+    "quotes": [1, "single"],
+    "no-tabs": 0,
+    "indent": ["error", "tab"]
+  }
 }
