--- a/package.json
+++ b/package.json
@@ -17,16 +17,10 @@
   "author": "Russell Goldenberg",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^6.0.0",
-    "babel-preset-es2015": "^6.3.13",
-    "browser-sync": "^2.10.0",
     "eslint": "^2.5.3",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.1"
+    "terser": "^5.5.1"
   },
   "dependencies": {}
 }
