--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "enter-view",
-  "version": "2.0.1",
-  "description": "Dependency-free JavaScript library to detect when element enters into view",
-  "main": "enter-view.min.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "enter",
-    "view",
-    "viewport",
-    "scroll",
-    "into",
-    "element"
-  ],
-  "author": "Russell Goldenberg",
-  "license": "MIT",
-  "devDependencies": {
-    "eslint": "^2.5.3",
-    "eslint-config-airbnb": "^6.2.0",
-    "eslint-plugin-react": "^4.2.3",
-    "terser": "^5.5.1"
-  },
-  "dependencies": {}
+	"name": "enter-view",
+	"version": "2.0.1",
+	"description": "Dependency-free JavaScript library to detect when element enters into view",
+	"main": "enter-view.min.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [
+		"enter",
+		"view",
+		"viewport",
+		"scroll",
+		"into",
+		"element"
+	],
+	"author": "Russell Samora",
+	"license": "MIT",
+	"devDependencies": {
+		"eslint": "^2.5.3",
+		"eslint-config-airbnb": "^6.2.0",
+		"eslint-plugin-react": "^4.2.3",
+		"terser": "^5.5.1"
+	},
+	"dependencies": {}
 }
